    optimization with gcc-4.6.  Closes: #619963.
  * Add patches/any/cvs-fnmatch.diff to fix an integer overflow in 
    fnmatch() (CVE-2011-1659).  Closes: #626370.
  * Update patches/kfreebsd/local-sysdeps.diff to fix a crash in
    if_nameindex() with more than 3 interfaces on GNU/kFreeBSD.
  * Fix preinst script wrt 3.0 kernel. Patch by Colin Watson.  Closes: 
    #630077.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 11 Jun 2011 18:12:35 +0200

eglibc (2.11.2-10) unstable; urgency=low

  * Add patches/amd64/cvs-avx-tcb-alignment.diff from upstream to fix 
    alignement issues on CPU supporting the AVX instruction set. Closes:
    #610657.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 23 Jan 2011 19:54:44 +0100

eglibc (2.11.2-9) unstable; urgency=low

  * Disable build failure in case of testsuite regressions, will be 
    re-enabled after squeeze release.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 20 Jan 2011 12:44:11 +0100

eglibc (2.11.2-8) unstable; urgency=low

  [ Clint Adams ]
  * Japanese debconf translation update from Nobuhiro Iwamatsu.
    closes: #604752.

  [ Samuel Thibault ]
  * Add expected gettext failure on hurd-i386.

  [ Aurelien Jarno ]
  * Update patches/localedata/locale-et_EE.diff to switch Estonian currency
    to euro. Closes: #608803.
  * Revert incorrect upstream patch for CVE-2010-3847 and use the correct
    set of patches:
    - Remove patches/any/submitted-origin.diff
    - Add patches/any/cvs-dont-expand-dst-twice.diff
    - Add debian/patches/any/cvs-ignore-origin-privileged.diff
    - Keep debian/patches/any/cvs-audit-suid.diff

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 12 Jan 2011 15:32:15 +0100

eglibc (2.11.2-7) unstable; urgency=low

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-sendmsg-leak.diff: New upstream patch from Emilio
    Pozuelo Monfort to fix a memory leak on the error path of sendmsg.
  * patches/hurd-i386/local-sendmsg-SCM_RIGHTS.diff: New patch from Emilio